# SP-CourseWork

./: CMakeLists.txt  README.md  clientmain.c  servermain.c
client/: CMakeLists.txt
networking/: CMakeLists.txt  connection.c  connection.h  server.c  server.h
server/: CMakeLists.txt  server.c
utils/: CMakeLists.txt  usersconfig.h  usersinfo.c  usersinfo.h  usersxmlparser.c  usersxmlparser.h  utils.c  utils.h
